Fix main directory compiler warnings. (#41)